// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hasMatch > case insensitive > hasMatch('AbC', 'abc') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
AbC
....................................................
abc
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > case insensitive > hasMatch('CFG', 'config') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
CFG
....................................................
config
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > case insensitive > hasMatch('cfg', 'CONFIG') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
cfg
....................................................
CONFIG
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > empty needle matches anything > hasMatch('', '') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

....................................................

╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > empty needle matches anything > hasMatch('', 'anything') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

....................................................
anything
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > missing characters fail > hasMatch('cxg', 'Config') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
cxg
....................................................
Config
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > missing characters fail > hasMatch('xyz', 'hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
xyz
....................................................
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > multiplicity is respected > hasMatch('aab', 'abba') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
aab
....................................................
abba
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > multiplicity is respected > hasMatch('aab', 'abc') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
aab
....................................................
abc
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > multiplicity is respected > hasMatch('ll', 'llama') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
ll
....................................................
llama
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > multiplicity is respected > hasMatch('ll', 'reload') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
ll
....................................................
reload
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > needle longer than haystack fails > hasMatch('abcdef', 'abc') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
abcdef
....................................................
abc
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > needle longer than haystack fails > hasMatch('hello', 'hi') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
....................................................
hi
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > non-empty needle against empty haystack fails > hasMatch('abc', '') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
abc
....................................................

╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > non-empty needle against empty haystack fails > hasMatch('x', '') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
x
....................................................

╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > out-of-order characters pass (multiset containment) > hasMatch('ba', 'ab') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
ba
....................................................
ab
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > out-of-order characters pass (multiset containment) > hasMatch('rc', 'configReload') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
rc
....................................................
configReload
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > out-of-order characters pass (multiset containment) > hasMatch('vdi', 'david') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
vdi
....................................................
david
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > subsequence match passes > hasMatch('abc', 'abc') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
abc
....................................................
abc
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > subsequence match passes > hasMatch('cfg', 'Config') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
cfg
....................................................
Config
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`hasMatch > subsequence match passes > hasMatch('cr', 'configReload') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
cr
....................................................
configReload
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;
